# This part is already added by cargo init.
[package]
name = "ktor-client-webrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
uniffi = { version = "0.30.0", features = ["tokio"] }
tokio = "1.47.1"
webrtc = "0.14.0"
thiserror = "2.0.12"
arc-swap = "1.7.1"
serde_json = "1.0.141"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bytes = "1.10.1"
async-trait = "0.1.88"
webrtc-media = "0.11.0"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "common/rust/lib.rs"
